2011-06-03  Marko Kohtala  <marko.kohtala@gmail.com>
  * Patch #3302490 by strobla. Fix for header/p18cxxx.inc to include new
  headers.
  * Patch #3308670 by Peter Heinrich to fix patch #3307321 and add test
  cases.

2011-05-26  Marko Kohtala  <marko.kohtala@gmail.com>
  * Patch #3307321 by Peter Heinrich. Adds support for PIC18 access_ovr and idata_acs directives.
  * Patch #3302490 by strobla. Add support for pic18f2xk22 / pic18f4xk22 family.

2010-11-28  Marko Kohtala  <marko.kohtala@gmail.com>
  * libgputils/gpcofflink.c (gp_cofflink_patch_addr): Fix typo in
  RELOCT_IBANKSEL. Fixes bug #3120845.

2010-11-23  Marko Kohtala  <marko.kohtala@gmail.com>
  * libgputils/gpcofflink.c (gp_cofflink_merge_sections): Fix symbol
  adjustments when merging sections. Fixes bug #3109409.

2010-11-21  Marko Kohtala  <marko.kohtala@gmail.com>
  * gplink/gplink.c (process_args): Applied patch by Kip in bug #3113064
  to fix segv when bad filename is given on command line.

2010-11-20  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/directive.c (do_res): Fix RES directive for PIC16E object
  files. Fixes bug #3113459.
  * libgputils/gpreadobj.c (_read_opt_header): Fix assigning processor for
  EEPROM16.
  * gputils/gpvo.c (print_data): Fix printing data for EEPROMs.
  * libgputils/gpprocessor.c (pics): Add EEPROM16.

2010-11-18  Marko Kohtala  <marko.kohtala@gmail.com>

  * gpasm/evaluate.c (add_reloc, evaluate): Fix $ value in idata section.
  * libgputils/gpcofflink.c (_create_rom_section): Initialize the padding
  byte that is added to make initialization data rom section size even
  bytes.
  (gp_add_cinit_section): Fix .cinit rom addresses.

2010-11-14  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/cod.c (write_cod_range_block): Fix
  gpasm/testsuite/gpasm.project/asmfiles/tb.asm compilation assertion
  error.

2010-11-13  Marko Kohtala  <marko.kohtala@gmail.com>
  * Patch #2970413 by Marco Mattila merged for partial pic16e support.